<resources>
    <string name="app_name">Target Shooter</string>
    <string name="target1">Target 1</string>
    <string name="target2">Target 2</string>
    <string name="target3">Target 3</string>
    <string name="target4">Target 4</string>
    <string name="target5">Target 5</string>
    <string name="target6">Target 6</string>
    <string name="slogan">Shoot them all!</string>
    <string name="error_empty_nickname">Nickname cannot be empty</string>
    <string name="nickname">Nickname</string>
    <string name="submit">Submit</string>
    <string name="next_stage">Next Stage</string>
    <string name="target7">Target 7</string>
    <string name="target8">Target 8</string>
    <string name="target9">Target 9</string>
    <string name="target10">Target 10</string>
    <string name="target11">Target 11</string>
    <string name="target12">Target 12</string>
    <string name="finish">Finish</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="start">Start</string>
    <string name="bintang_name">Rahma Bintang Pratama</string>
    <string name="bintang_nim">21106050006</string>
    <string name="student_status">Bachelor\'s Program in Informatics - Faculty of Science and Technology - Sunan Kalijaga State Islamic University</string>
    <string name="ghibran_name">Ghibran Tsamara Alvaridzy Ramadhan</string>
    <string name="ghibran_nim">21106050092</string>
    <string name="indra_name">Indra Arya Slamet Praditya</string>
    <string name="indra_nim">21106050002</string>
    <string name="our_great_team">Our Great Team</string>
    <string name="best_score">Best Score:</string>
    <string name="zero">0</string>
    <string name="hi">Hi,</string>
    <string name="welcome">Welcome to</string>
    <string name="select_difficulty">Select your difficulty level:</string>
    <string name="about">About</string>
    <string name="stage_1">STAGE 1</string>
    <string name="score">Score:</string>
    <string name="score_value">Score Value</string>
    <string name="time_left">Time Left:</string>
    <string name="time_left_value">Time Left Value</string>
    <string name="gun_actor_1">Gun Actor 1</string>
    <string name="gun_actor_2">Gun Actor 2</string>
    <string name="gun_actor_3">Gun Actor 3</string>
    <string name="stage_2">STAGE 2</string>
    <string name="stage_3">STAGE 3</string>
    <string name="final_score">Your final score is:</string>
    <string name="back_to_home">Back to home</string>
    <string name="insert_nickname">Insert your nickname:</string>
    <string name="name_changed_success">Nickname successfully changed!</string>
    <string name="night_carnival">Night Carnival</string>
    <string name="colorful_lamp">Colorful Lamp</string>
    <string name="operator">Operator</string>
    <string name="next">Next ⨠⨠⨠</string>
    <string name="skip">Skip Intro ⨠⨠⨠</string>
    <string name="message_1">Hi, my name\'s Agus. I\'m the operator for the Target Shooter game at this night carnival. This game really grabs the attention of the visitors here.</string>
    <string name="message_2">You seem unsure about which game to play. Is this your first time here? Maybe you could try the Target Shooter game first. I\'m sure you\'ll like it.</string>
    <string name="message_3">This game is pretty easy. You just need to hit the targets you see. They will pop up and disappear repeatedly. Just stay focused to hit them.</string>
    <string name="message_4">We\'ve got two game modes here: Easy and Hard. In Easy mode, you just hit the targets as I mentioned. But in Hard mode, be careful because the targets move faster and there are bombs that can reduce your points. Remember, each target hit gives you one point, but hitting a bomb will cost you two points. So, watch out and have fun!</string>
    <string name="lets_play">Let\'s Play ⨠⨠⨠</string>
    <string name="easy_message_1">Oh, so you want to play in Easy mode?</string>
    <string name="easy_message_2">This mode is super easy, even beginners can play it effortlessly. But I think you\'re more than just a beginner. Maybe you can try the Hard mode later.</string>
    <string name="easy_message_3">Alright, if you still want to play Easy mode, let me remind you that you just need to hit the targets that pop up. They will appear and disappear repeatedly. Stay focused to hit them.</string>
    <string name="easy_message_4">Alright then, go ahead and play. Don\'t forget to have fun because there\'s no point in playing if it\'s not enjoyable. Enjoy the game!</string>
    <string name="skip_and_play">Skip and Play ⨠⨠⨠</string>
    <string name="hard_message_1">Wow, looks like you\'re brave enough to try Hard mode!</string>
    <string name="hard_message_2">This mode is pretty challenging for beginners. But I believe you\'re more than just a beginner. Are you sure you want to take on this challenge?</string>
    <string name="hard_message_3">Alright, I respect your courage. Many visitors get challenged by this mode, but they often struggle with it. Let me remind you once more, in this mode, you need to be careful because the targets move faster, and there are bombs that can decrease your points.</string>
    <string name="hard_message_4">Alright then, show me that you can handle it. But don\'t forget that this is just a game. So, make sure you enjoy it. Have fun!</string>
    <string name="choose_difficulty">You have to choose the difficulty level</string>
    <string name="exit">Press once more to exit</string>
    <string name="exit_dialog_title">End Current Game</string>
    <string name="exit_dialog_message">Are you sure you want to end the game?\nYour progress will not be saved.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unsupported_android_dialog_title">Unsupported Android Version</string>
    <string name="unsupported_android_dialog_message">This game only supports Android 9 (Pie) and above.\nThe application will close automatically in 5 seconds.</string>
    <string name="indra_role">Visual and Audio Editor</string>
    <string name="bintang_role">Programmer</string>
    <string name="role_ghibran">Assets Creator</string>
</resources>