<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sodalite_blue"
    tools:context=".ui.result.ResultActivity">

    <ImageView
        android:id="@+id/ivColorfulLamp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_colorful_lamp"
        android:contentDescription="@string/colorful_lamp"
        android:alpha="1"/>

    <ImageView
        android:id="@+id/ivNightCarnival"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_night_carnival_background"
        android:contentDescription="@string/night_carnival"
        android:alpha="0.3"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivTargetBroken"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_target_broken"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"/>

    <TextView
        android:id="@+id/tvFinalScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/ivTargetBroken"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/bungee_spice_regular"
        android:text="@string/final_score"/>

    <TextView
        android:id="@+id/tvFinalScoreValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvFinalScore"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/bungee_spice_regular"
        android:text="@string/zero"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHome"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/dark_orange"
        android:fontFamily="@font/jockey_one_regular"
        android:text="@string/back_to_home"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFinalScoreValue" />

</androidx.constraintlayout.widget.ConstraintLayout>